--- a/competitors/templates/registration/register.html
+++ b/competitors/templates/registration/register.html
@@ -49,7 +49,8 @@
         </div>
     </div>
     {% include 'competitors/footer.html' %}
-    <modal-dialog></model-dialog>
+    <modal-dialog></modal-dialog>
+</body>
 
 
 <script src="{{STATIC_URL}}competitors/js/jquery.min.js"></script>
