--- a/competitors/static/competitors/css/team.css
+++ b/competitors/static/competitors/css/team.css
@@ -37,3 +37,113 @@
 	text-align: center;
 		
 }*/
+body {
+	background-color: #A9A9A9 !important;
+}
+
+#header-wrapper {
+	height: 70px;
+	width: 100%;
+	padding: 0;
+	margin: 1em 0 0 0;
+	background: #FF8C00;
+	color: white;
+}
+
+#header {
+	position: absolute;
+	top: 0;
+	height: 280px;
+	width: 100%;
+	background: #FFDAB9;
+	z-index: -1;
+}
+
+#header-wrapper small {
+	height: 70px;
+  	line-height: 70px;
+ 	white-space: nowrap;
+}
+
+#header-search-bar {
+	margin-top: 20px;
+	margin-top: 20px;
+}
+
+#logo-wrapper {
+	margin-top: 0.5em;	
+}
+
+.radio {
+	padding-left: 1em;
+}
+
+#row1 {
+	margin-top: 150px;
+	margin-bottom: 10px;
+	padding: 20px 10px;
+}
+
+#row2, #pagination {
+	margin: 10px auto;
+	padding: 0;
+}
+
+#news1, #news2 {
+	height: 250px;
+	margin: 10px auto;
+}
+
+.cp-box {
+	background-color: rgba(255,255,255,0.7);
+}
+
+.cp-schedule-box {
+	height: 250px;
+}
+
+#schedules {
+	padding: 0;
+}
+
+#shcedule1 {
+	padding-right: 10px;
+}
+
+#schedule2 {
+	padding-left: 10px;
+}
+
+#footer {
+	font-weight: bold;
+	color: white;
+	background: #494949;
+}
+
+#footer-text {
+	padding-top: 2em;
+}
+
+#facebool-wrapper, #twitter-wrapper, #rss-wrapper {
+	margin-left: 1em;
+}
+
+.tab-pane {
+	height: 600px;
+	background: white;
+	border-left: 1px solid #ddd;
+	border-right: 1px solid #ddd;
+	padding: 10% 20%;
+}
+
+
+#img-wrapper {
+	margin: 0px 10px;
+	border: 5px solid white;
+	box-shadow: 5px 5px 5px #888888;
+	height: 300px;
+	width: 300px;
+	background-image: url('../media/JohnTerry.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+}
