See #25 style modified 2

--- a/competitors/templates/competitors/team.html
+++ b/competitors/templates/competitors/team.html
@@ -28,15 +28,14 @@
 	</div>
 	<div class="container">
 		<div class="cp-box cp-box-flex" id="row1">
-			<div class="col-sm-12 col-md-4" id="img-wrapper">
+			<div class="col-sm-4 col-md-4" id="img-wrapper">
 				<img style="width:100%;height:100%"src="/static/competitors/img/soccer/england/t_manchesterunited.png">
 			</div>
-			<div class="col-sm-12 col-md-2 cp-pull-down">
-				<h3>Team Name</h3>
+			<div class="col-sm-4 col-md-4 cp-pull-down">
+				<h3>Manchester United</h3>
 				<button class="btn btn-warning"> Follow + </button>
 			</div>
-			<div class="col-md-1"></div>
-			<div class="col-sm-12 col-md-5 pull-right">
+			<div class="col-sm-4 col-md-4 pull-right">
 				<p>Team description Team descriptionTeam descriptionTeam descriptionTeam descriptionTeam descriptionTeam descriptionTeam descriptionTeam descriptionTeam descriptionTeam descriptionTeam descriptionTeam description</p>
 			</div>
 		</div>
