--- a/competitors/templates/competitors/navbar.html
+++ b/competitors/templates/competitors/navbar.html
@@ -68,5 +68,5 @@
 
 	    </div>
 </nav>
-<login-pop ng-controller="login" ng-init="redirect = '{% firstof request.path %}'"></login-pop>
+<login-pop ng-controller="header" ng-init="redirect = '{% firstof request.path %}'"></login-pop>
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/base.js"></script>
