--- a/competitors/templates/competitors/base.html
+++ b/competitors/templates/competitors/base.html
@@ -47,7 +47,7 @@
   </div>
   <script type="text/javascript" src="{{STATIC_URL}}competitors/js/jquery-2.1.3.min.js"></script>
   <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-  <script type="text/javascript" src="{{STATIC_URL}}competitors/js/login.js"></script>
+  <script type="text/javascript" src="{{STATIC_URL}}competitors/js/header.js"></script>
   <script type="text/javascript" src="{{STATIC_URL}}competitors/js/base.js"></script>
   </body>
 </html>
