--- a/competitors/static/competitors/css/base.css
+++ b/competitors/static/competitors/css/base.css
@@ -1,3 +1,4 @@
+.ui-autocomplete { position: absolute; cursor: default;z-index:20 !important;}
 /*For the container of navbar*/
 #navbar-container{
 	position: absolute;
