--- a/competitors/static/competitors/css/index.css
+++ b/competitors/static/competitors/css/index.css
@@ -1,3 +1,5 @@
+/* Make autocomplete higher z-index */
+.ui-autocomplete { position: absolute; cursor: default;z-index:20 !important;}
 /*For Background Carousel*/
 #cp-bg-carousel {
     width: 100%;
